Bug 146499 - Crash to desktop when activating presentation mode (unsatisfied query for interface of type com.sun.star.lang.XUnoTunnel!)
Summary: Crash to desktop when activating presentation mode (unsatisfied query for int...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, haveBacktrace, regression
: 146503 146582 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-12-31 13:28 UTC by Telesto
Modified: 2022-01-05 18:16 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
BT without symbols (18.70 KB, text/plain)
2021-12-31 16:48 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-12-31 13:28:24 UTC
Description:
Crash to desktop when activating presentation mode (unsatisfied query for interface of type com.sun.star.lang.XUnoTunnel!)

Steps to Reproduce:
1. Open Impress
2. Press F5

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1bb0e177124d5d6661b72df6c7d848fb23639652
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Julien Nabet 2021-12-31 16:30:52 UTC
On pc Debian x86-64 with master sources updated today, I don't have a crash but an hang.
I noticed several times this on console:
warn:sd:11475:11475:sd/source/ui/framework/tools/FrameworkHelper.cxx:209: DBG_UNHANDLED_EXCEPTION in lcl_getViewShell exception: com.sun.star.uno.RuntimeException message: unsatisfied query for interface of type com.sun.star.lang.XUnoTunnel! /home/julien/lo/libreoffice/include/com/sun/star/uno/Reference.hxx:83
Comment 2 Telesto 2021-12-31 16:48:57 UTC
Created attachment 177222 [details]
BT without symbols
Comment 3 Telesto 2021-12-31 16:53:51 UTC
(In reply to Julien Nabet from comment #1)
> On pc Debian x86-64 with master sources updated today, I don't have a crash
> but an hang.
> I noticed several times this on console:
> warn:sd:11475:11475:sd/source/ui/framework/tools/FrameworkHelper.cxx:209:
> DBG_UNHANDLED_EXCEPTION in lcl_getViewShell exception:
> com.sun.star.uno.RuntimeException message: unsatisfied query for interface
> of type com.sun.star.lang.XUnoTunnel!
> /home/julien/lo/libreoffice/include/com/sun/star/uno/Reference.hxx:83

It crashes - in my case - nearly instantaneous after those warning appear.
Comment 4 Julien Nabet 2021-12-31 21:21:20 UTC
On Win10 with master sources updated today, I could reproduce this.
For a reason I ignore, I fail to retrieve a bt on Windbg.

(never know if I must attach to simpress.exe, soffice.exe or soffice.bin).
When attaching to soffice.bin, it hangs,
when attaching to soffice.exe, it crashes/aborts and proposes to Ignore, retry or abandon, I think I tested the 3 and never got a stacktrace with !analyze -v
Comment 5 Julien Nabet 2021-12-31 22:00:26 UTC
*** Bug 146503 has been marked as a duplicate of this bug. ***
Comment 6 Julien Nabet 2021-12-31 22:01:55 UTC
see bt provided by Regina here:
https://bugs.documentfoundation.org/attachment.cgi?id=177227

Telesto: the weird thing is it seems at a different location than yours.
Comment 7 Telesto 2022-01-05 09:41:52 UTC
*** Bug 146582 has been marked as a duplicate of this bug. ***
Comment 8 Buovjaga 2022-01-05 11:07:57 UTC
Bisect result in bug 146582
https://git.libreoffice.org/core/commit/62efb188668a3296591dcfa3658185e2f982e356
use comphelper::WeakComponentImplHelper in SlideShowView
Comment 9 Noel Grandin 2022-01-05 11:56:02 UTC
fix at https://gerrit.libreoffice.org/c/core/+/127998
Comment 10 Buovjaga 2022-01-05 12:04:01 UTC
(In reply to Noel Grandin from comment #9)
> fix at https://gerrit.libreoffice.org/c/core/+/127998

The fix works for me!
Comment 11 Commit Notification 2022-01-05 18:03:29 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a6e7b7c9044c689b7824cf97f4ff79655a950802

tdf#146499 Crash to desktop when activating presentation mode

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Noel Grandin 2022-01-05 18:05:30 UTC
Noting that the XUnoTunnel warning had nothing to do with this bug
Comment 13 Julien Nabet 2022-01-05 18:16:42 UTC
After having updated local repo, I confirm I don't reproduce the hang anymore.

But I still have:
warn:sd:24374:24374:sd/source/ui/framework/tools/FrameworkHelper.cxx:209: DBG_UNHANDLED_EXCEPTION in lcl_getViewShell exception: com.sun.star.uno.RuntimeException message: unsatisfied query for interface of type com.sun.star.lang.XUnoTunnel! /home/julien/lo/libreoffice/include/com/sun/star/uno/Reference.hxx:83
warn:legacy.tools:24374:24374:svx/source/form/fmshimp.cxx:1800: only to be used in alive mode
so indeed, unrelated.