tdf#146499 Crash to desktop when activating presentation mode

mutex deadlock, regression from
    commit 62efb188668a3296591dcfa3658185e2f982e356
    use comphelper::WeakComponentImplHelper in SlideShowView

Change-Id: I1822d4beffaa44be7f789db4bd0f5a25d1896396